--- a/index.html
+++ b/index.html
@@ -1,114 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registro de Conteo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body class="bg-light py-4">
-    <div class="container">
-      <div class="card shadow">
-        <div class="card-header bg-primary text-white">
-          <h4 class="mb-0">Registro de Conteo de Vacunas</h4>
-        </div>
-        <div class="card-body">
-          <div class="row mb-3">
-            <div class="col-md-4">
-              <label for="redSalud" class="form-label">Red de Salud</label>
-              <select id="redSalud" class="form-select">
-                <option value="RED DE SALUD PACIFICO SUR">RED DE SALUD PACIFICO SUR</option>
-                <option value="RED DE SALUD PACIFICO NORTE">RED DE SALUD PACIFICO NORTE</option>
-              </select>
-            </div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-              <label for="fecha" class="form-label">Fecha</label>
-              <input type="date" id="fecha" class="form-control" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="row mb-3">
-              <div class="col-md-2 mb-3">
-                <label class="form-label">Pentavalente (3ra Dosis)</label>
-                <input type="number" id="pentaMenor1" class="form-control" placeholder="Menor de 1 Año" />
-              </div>
-              <div class="col-md-2 mb-3">
-                <label class="form-label">SPR (2da Dosis)</label>
-                <input type="number" id="spr1anio" class="form-control" placeholder="1 Año" />
-              </div>
-            </div>
-            <div class="col-md-3 mb-3">
-              <label class="form-label">Influenza (DU)</label>
-              <input type="number" id="influ2" class="form-control mb-2" placeholder="2 Años" />
-              <input type="number" id="influ3" class="form-control" placeholder="3 Años" />
-            </div>
-            <div class="col-md-3 mb-3">
-              <label class="form-label">DPT (2 Refuerzo)</label>
-              <input type="number" id="dpt4" class="form-control" placeholder="4 Años" />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label class="form-label">Neumococo (DU)</label>
-              <input type="number" id="neumo60" class="form-control" placeholder="60 a Más" />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label class="form-label">Influenza (DU)</label>
-              <input type="number" id="influ60" class="form-control" placeholder="60 a Más" />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label class="form-label">DPTa (DU)</label>
-              <input type="number" id="dptaGest" class="form-control" placeholder="Gestante" />
-            </div>
-            <div class="col-md-6 mb-3">
-              <label class="form-label">VPH</label>
-              <input type="number" id="vph9a18" class="form-control" placeholder="9 a 18 Años" />
-            </div>
-          </div>
-          <div class="text-end">
-            <button class="btn btn-success" onclick="registrar()">Registrar Conteo</button>
-          </div>
-        </div>
-      </div>
-    </div>
+<script>
+  const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycb.../exec'; // <-- REEMPLAZA CON TU URL
 
-    <script>
-      function registrar() {
-        const data = {
-          redSalud: document.getElementById("redSalud").value,
-          fecha: document.getElementById("fecha").value,
-          vacunas: {
-            pentaMenor1: parseInt(document.getElementById("pentaMenor1").value) || 0,
-            spr1anio: parseInt(document.getElementById("spr1anio").value) || 0,
-            influ2: parseInt(document.getElementById("influ2").value) || 0,
-            influ3: parseInt(document.getElementById("influ3").value) || 0,
-            dpt4: parseInt(document.getElementById("dpt4").value) || 0,
-            neumo60: parseInt(document.getElementById("neumo60").value) || 0,
-            influ60: parseInt(document.getElementById("influ60").value) || 0,
-            dptaGest: parseInt(document.getElementById("dptaGest").value) || 0,
-            vph9a18: parseInt(document.getElementById("vph9a18").value) || 0,
-          }
-        };
-
-        fetch("TU_URL_DEL_WEB_APP", {
-          method: "POST",
-          body: JSON.stringify(data),
-          headers: {
-            "Content-Type": "application/json",
-          }
-        })
-        .then(res => res.text())
-        .then(res => {
-          if (res === "OK") {
-            alert("¡Conteo registrado exitosamente!");
-          } else {
-            alert("Ocurrió un error al registrar.");
-          }
-        })
-        .catch(err => {
-          console.error("Error:", err);
-          alert("Error al enviar el formulario");
-        });
+  function registrar() {
+    const data = {
+      redSalud: document.getElementById("redSalud").value,
+      fecha: document.getElementById("fecha").value,
+      vacunas: {
+        pentaMenor1: parseInt(document.getElementById("pentaMenor1").value) || 0,
+        spr1anio: parseInt(document.getElementById("spr1anio").value) || 0,
+        influ2: parseInt(document.getElementById("influ2").value) || 0,
+        influ3: parseInt(document.getElementById("influ3").value) || 0,
+        dpt4: parseInt(document.getElementById("dpt4").value) || 0,
+        neumo60: parseInt(document.getElementById("neumo60").value) || 0,
+        influ60: parseInt(document.getElementById("influ60").value) || 0,
+        dptaGest: parseInt(document.getElementById("dptaGest").value) || 0,
+        vph9a18: parseInt(document.getElementById("vph9a18").value) || 0,
       }
-    </script>
-  </body>
-</html>
+    };
+
+    fetch(WEB_APP_URL, {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: {
+        "Content-Type": "application/json",
+      },
+    })
+    .then(res => res.json())
+    .then(response => {
+      if (response.success) {
+        alert("✅ " + response.message);
+      } else {
+        alert("❌ Error: " + response.message);
+      }
+    })
+    .catch(err => {
+      alert("⚠️ Error de red: " + err.message);
+    });
+  }
+</script>
