--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-  const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycb.../exec'; // <-- REEMPLAZA CON TU URL
+  const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbybNdibN0Z-BvXJbGlS7HRr13OwHSX0sAJ5HU22I8ZduJWrc2OTHkLIxtPoKuG7RW7Cxg/exec'; // <-- REEMPLAZA CON TU URL
 
   function registrar() {
     const data = {
