--- a/index.html
+++ b/index.html
@@ -29,8 +29,43 @@
           </div>
 
           <div class="row">
-            <!-- Campos de vacunas aquí... -->
-            <!-- Recorta por brevedad, ya tienes el código completo -->
+            <div class="row">
+            <div class="row mb-3">
+              <div class="col-md-2 mb-3">
+                <label class="form-label">Pentavalente (3ra Dosis)</label>
+                <input type="number" id="pentaMenor1" class="form-control" placeholder="Menor de 1 Año" />
+              </div>
+              <div class="col-md-2 mb-3">
+                <label class="form-label">SPR (2da Dosis)</label>
+                <input type="number" id="spr1anio" class="form-control" placeholder="1 Año" />
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label class="form-label">Influenza (DU)</label>
+              <input type="number" id="influ2" class="form-control mb-2" placeholder="2 Años" />
+              <input type="number" id="influ3" class="form-control" placeholder="3 Años" />
+            </div>
+            <div class="col-md-3 mb-3">
+              <label class="form-label">DPT (2 Refuerzo)</label>
+              <input type="number" id="dpt4" class="form-control" placeholder="4 Años" />
+            </div>
+            <div class="col-md-6 mb-3">
+              <label class="form-label">Neumococo (DU)</label>
+              <input type="number" id="neumo60" class="form-control" placeholder="60 a Más" />
+            </div>
+            <div class="col-md-6 mb-3">
+              <label class="form-label">Influenza (DU)</label>
+              <input type="number" id="influ60" class="form-control" placeholder="60 a Más" />
+            </div>
+            <div class="col-md-6 mb-3">
+              <label class="form-label">DPTa (DU)</label>
+              <input type="number" id="dptaGest" class="form-control" placeholder="Gestante" />
+            </div>
+            <div class="col-md-6 mb-3">
+              <label class="form-label">VPH</label>
+              <input type="number" id="vph9a18" class="form-control" placeholder="9 a 18 Años" />
+            </div>
+          </div>
           </div>
 
           <div class="text-end">
